# rinha-rust-warp

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
.github/workflows/: publish.yml
src/: lib.rs  main.rs  nats.rs  process_payment.rs  routes.rs
