[package]
name = "rinha-rust-warp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
warp = "0.3.7"
